# quickQuantCFR

./: CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: nodeids
docs/: documentationTextFile.txt  documentationWebsite.html
src/quickQuantCFR/: ._core.py  backtestingEngine.py  core.py
src/quickQuantCFR.egg-info/: ._SOURCES.txt  PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: testCore.py  test_core.py  testingFilePath.py
